<resources>
    <string name="app_name">Charge On The Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="User">User</string>
    <string name="Provider">Provider</string>
    <string name="Login">Login</string>
    <string name="ContinueWithGoogle">Continue with google</string>
    <string name="Password">Password</string>
    <string name="Phone">Phone Number</string>
    <string name="Register">Register</string>
    <string name="CreatenewAccount"><u>Create new account</u></string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="PinCode">Pin code</string>
    <string name="Continue">Continue</string>
    <string name="City">City</string>
    <string name="MyBooking">My Bookings</string>
    <string name="SearchBunk">Search Bunk</string>
    <string name="Profile">Profile</string>
    <string name="About">About Us</string>
    <string name="help">Help</string>
    <string name="Logout">Logout</string>
    <string name="TotalSlot">Total slot</string>
    <string name="Bunkname">Bunk Name</string>
    <string name="termsofservice">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tem por incididunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tem por incididunt .</string>
    <string name="CreateBunk">Create Bunk</string>
    <string name="fieldRequired">Field Required</string>
    <string name="proparFormat">Please write proper format</string>
    <string name="atleast8char">Please write atleast 8 char</string>
    <string name="atleas8char">Atleast 8 char required</string>
    <string name="charging_slot">Charging Slot</string>
    <string name="myProfile">My Profile</string>
    <string name="update">Update</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="profileUpdateSuccess">Profile updated successfully</string>
    <string name="change_authorization">Change Password</string>
    <string name="update_credentials">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="oldNewcheck">New Password can\'t be same as Old Password</string>
    <string name="passSuccessFully">Password updated successfully</string>
    <string name="authorizationFailed">Authorization failed</string>
    <string name="view_map"><u>View Map</u></string>
    <string name="reviews">Reviews</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_booking">Confirm Booking?</string>
    <string name="wait">Wait</string>
    <string name="bookingSuccess">Booking placed successfully</string>
    <string name="myBookings">My Bookings</string>
    <string name="dateTime"><![CDATA[Date & Time]]></string>
    <string name="at">at</string>
    <string name="bookingDetails">Booking Details</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="rate_bunk">Rate Bunk</string>
    <string name="describe_your_experience">Describe your experience</string>
    <string name="writeSomething">Please write something</string>
    <string name="reviewSuccess">Review submitted successfully</string>
    <string name="km">\? Km</string>
    <string name="distance">Distance</string>
    <string name="home1">Home</string>
    <string name="done">Done</string>
    <string name="selectDate">Please select date of booking</string>
    <string name="my_feedback">My Feedback</string>
    <string name="my_bunk1">My Bunks</string>
    <string name="myStations">My Bunks</string>
    <string name="delete">Delete</string>

</resources>