<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/stroke_main"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/tv_heading"
        style="@style/Heading"
        android:gravity="center"
        android:textColor="@color/appcolor"
        android:text="@string/confirm_booking"/>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_yes"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/confirm"/>
        <TextView
            android:id="@+id/btn_no"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
            android:padding="10dp"
            android:text="@string/wait"/>

    </LinearLayout>

</LinearLayout>