<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_electric_car"
                android:visibility="visible" />

            <com.hanks.htextview.rainbow.RainbowTextView
                android:id="@+id/tv_name"
                style="@style/Heading"
                android:textColor="@color/appcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:text="@string/User"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="visible" />

            <com.hanks.htextview.rainbow.RainbowTextView
                android:id="@+id/tv_email"
                style="@style/Heading"
                android:textColor="@color/appcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:text="@string/User"
                android:textSize="16dp"
                android:textStyle="bold"
                android:visibility="visible" />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/grey" />


            <TextView
                android:id="@+id/tv_home"
                style="@style/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/grey" />


            <TextView
                android:id="@+id/tv_profile"
                style="@style/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/Profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/tv_changeAuth"
                style="@style/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/change_authorization" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/grey" />

            <LinearLayout

                android:id="@+id/tv_myFeedbacks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/my_feedback" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_aboutUs"
                style="@style/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/About" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/tv_help"
                style="@style/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/help"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/grey"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_logout"
                style="@style/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/Logout" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/grey" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>