<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <include layout="@layout/top_bar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:src="@drawable/ic_electric_car" />

                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/myProfile" />

                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/Name" />

                <EditText
                    android:id="@+id/et_name"
                    style="@style/normalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true" />


                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/Phone" />

                <EditText
                    android:id="@+id/et_phoneNum"
                    style="@style/normalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Phone"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true" />





                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/City"
                    android:visibility="gone" />

                <EditText
                    style="@style/normalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/City"
                    android:padding="10dp"
                    android:singleLine="true"

                    android:visibility="gone" />

                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/Address"
                    android:visibility="gone" />

                <EditText
                    style="@style/normalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TotalSlot"
                    android:padding="10dp"
                    android:singleLine="true"

                    android:visibility="gone" />

                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/TotalSlot"
                    android:visibility="gone" />

                <EditText
                    style="@style/normalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address"
                    android:padding="10dp"
                    android:singleLine="true"

                    android:visibility="gone" />


                <TextView
                    android:id="@+id/tv_continue"
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/button_bg"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/update"
                    android:textColor="@color/white" />

                <TextView
                    android:visibility="gone"
                    style="@style/textHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/button_bg"
                    android:backgroundTint="@color/darkgrey"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="10dp"
                    android:text="@string/ContinueWithGoogle"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>